2004-08-12  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: we need to verify
	functionname is non-NULL in *both* places

2004-08-12  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: add a hack to support
	Objective C

2004-07-21  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_manage.c: thinko in #931871 bug fix.

2004-07-21  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: fix opreport -m lib, broken in 0.8
	  when using opcontrol --separate=kernel with message
	  "add_to_profile_sample_files(): sample file parsed twice"

2004-07-18  John Levon  <levon@movementarian.org>

	* libop/op_mangling.c: dep image always used
	'{root}' token

2004-07-15  John Levon  <levon@movementarian.org>

	* doc/internals.xml: document some more

2004-07-09  John Levon  <levon@movementarian.org>

	* libpp/populate.cpp: quash timestamp warnings
	 when using archive: profile specifier

2004-07-09  John Levon  <levon@movementarian.org>

	* pp/opstack_options.cpp: include call-graph
	  files in archive.

2004-07-06  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* libpp/profile_spec.h:
	* libpp/profile_spec.cpp: remove sample-file
	  and binary profile specifiers

	* doc/opcontrol.1.in:
	* doc/oprofile.xml:
	* pp/common_option.cpp:
	* utils/opcontrol: allow either "lib" or "library"
	 for merge/separate option. Document "lib"

2004-07-06  Will Cohen <wcohen@redhat.com>

	* doc/oprofile.xml:
	* doc/Makefile.am:
	* doc/oparchive.1.in:
	* doc/oprofile.1.in:
	* libpp/profile_spec.cpp:
	* libpp/profile_spec.h:
	* libpp/populate.h:
	* libpp/populate.cpp:
	* libpp/callgraph_container.cpp:
	* libpp/callgraph_container.h:
	* libpp/arrange_profiles.cpp:
	* libpp/arrange_profiles.h:
	* libpp/locate_images.cpp:
	* libpp/locate_images.h:
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp:
	* libutil++/file_manip.cpp:
	* libutil++/file_manip.h:
	* pp/Makefile.am:
	* pp/oparchive.cpp:
	* pp/oparchive_options.cpp: